# ri-scale

./: .gitignore
scripts/: anonymize_svs.py  select_slides.py
tissue_classifier/: pyproject.toml
tissue_classifier/configs/: base.yaml  preprocessing.yaml
tissue_classifier/configs/data/datasets/: mmci.yaml
tissue_classifier/configs/data/raw/: mmci.yaml
tissue_classifier/configs/data/split/: default.yaml  mmci.yaml
tissue_classifier/configs/experiment/: mmci.yaml
tissue_classifier/configs/hydra/job_logging/: custom.yaml
tissue_classifier/configs/model/: default.yaml
tissue_classifier/configs/preprocessing/: dataset_build.yaml  dataset_split.yaml  patient_dataset.yaml
tissue_classifier/configs/trainer/: default.yaml
tissue_classifier/configs/training/: default.yaml
tissue_classifier/preprocessing/: data_source.py  dataset_builder.py  dataset_split.py  name_parsers.py  patient_dataset.py
tissue_classifier/scripts/: build_dataset.py  dataset_split.py  patient_dataset.py  split_dataset.py  train.py
tissue_classifier/tissue_classifier/: __main__.py  callbacks.py  meta_arch.py
tissue_classifier/tissue_classifier/data/: data_module.py  dataset.py
tissue_classifier/tissue_classifier/modeling/: backbone.py  head.py
