[project]
name = "tissue-classifier"
version = "0.1.0"
authors = [
    { name = "Jakub Pekár", email = "jakubpekar@mail.muni.cz" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.0.0",
    "lightning>=2.5.0",
    "omegaconf>=2.3.0",
    "openslide-python>=1.3.0",
    "pandas>=2.0.0",
    "rationai-mlkit",
    "ratiopath>=1.4.1",
    "scikit-learn>=1.5.0",
    "timm>=1.0.0",
    "torch>=2.5.0",
    "torchmetrics>=1.4.0",
    "torchvision>=0.20.0",
    "mlflow>=3.14.0",
]

[dependency-groups]
dev = ["mypy", "ruff"]

[tool.uv.sources]
rationai-mlkit = { git = "https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
